<resources>
    <string name="app_name">QuickMaths</string>
    <string name="play_button">Play</string>
    <string name="leaderboard_button">Leaderboard</string>
    <string name="settings_button">Settings</string>
    <string name="quit_button">Quit</string>
    <string name="home_title">Home</string>
    <string name="play_title">Play</string>
    <string name="leaderboard_title">Leaderboard</string>
    <string name="settings_title">Settings</string>

    <string name="tv_play_default_text">1 + 2</string>
    <string name="et_play_default_text">3</string>
    <string name="number_zero">0</string>
    <string name="number_one">1</string>
    <string name="number_two">2</string>
    <string name="number_three">3</string>
    <string name="number_four">4</string>
    <string name="number_five">5</string>
    <string name="number_six">6</string>
    <string name="number_seven">7</string>
    <string name="number_eight">8</string>
    <string name="number_nine">9</string>
    <string name="backspace_button">Backspace</string>
    <string name="delete_button">Del</string>
    <string name="home_tv">HOME</string>
    <string name="you_lost">YOU LOST</string>
    <string name="you_scored">You scored</string>
    <string name="play_again">Play again</string>
    <string name="view_leaderboard">View leaderboard</string>
    <string name="new_best_score">New Best Score!</string>
    <string name="leader_fragment">Leader Fragment</string>
    <string name="enter_name">Enter your name</string>
    <string name="register">Register</string>
    <string name="enter_name_hint">Abigail Hobbs..</string>
    <string name="preference_file_key">com.example.quickmaths.PREFERENCE_FILE_KEY</string>
    <string name="saved_high_score_key">saved_high_score_key</string>
    <string name="highest_score">Highest Score</string>
    <string name="btn_sign_in_with_google">Sign in With Google</string>
    <string name="btn_sign_in_anonymous">Sign in As Anonymous</string>
    <string name="btn_log_out">Log out</string>
    <string name="et_nickname">Nickname..</string>
    <string name="btn_confirm">CONFIRM</string>
    <string name="switch_addition">Addition +   </string>
    <string name="switch_subtraction">Subtraction - </string>
    <string name="switch_multiplication">Multiplication *</string>
    <string name="switch_division">Division /</string>
    <string name="swith_square_root">Square root</string>
    <string name="switch_exponential">Exponential ^</string>

</resources>