<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.FirstTimeFragment">

    <data>

        <variable
            name="viewModel"
            type="com.example.quickmaths.viewmodels.FirstTimeViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_enter_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/constraint_top"
            android:text="@string/enter_name"
            android:textSize="@dimen/number_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/constraint_top"
            android:hint="@string/enter_name_hint"
            android:textSize="@dimen/number_size"
            app:layout_constraintEnd_toEndOf="@+id/tv_enter_name"
            app:layout_constraintStart_toStartOf="@+id/tv_enter_name"
            app:layout_constraintTop_toBottomOf="@+id/tv_enter_name" />

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            android:layout_marginTop="@dimen/constraint_top"
            android:text="@string/register"
            android:onClick="@{() -> viewModel.onRegisterPressed()}"
            android:textSize="@dimen/number_size"
            app:layout_constraintEnd_toEndOf="@+id/et_username"
            app:layout_constraintStart_toStartOf="@+id/et_username"
            app:layout_constraintTop_toBottomOf="@+id/et_username" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.15" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>