<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.LostFragment">

    <data>
        <variable
            name="viewModel"
            type="com.example.quickmaths.viewmodels.LostViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/appCompatTextView2"
            style="@style/TitleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top_big"
            android:text="@string/you_lost"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </androidx.appcompat.widget.AppCompatTextView>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/appCompatTextView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top_big"
            android:text="@string/you_scored"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="@+id/appCompatTextView2"
            app:layout_constraintHorizontal_bias="0.4"
            app:layout_constraintStart_toStartOf="@+id/appCompatTextView2"
            app:layout_constraintTop_toBottomOf="@+id/appCompatTextView2">

        </androidx.appcompat.widget.AppCompatTextView>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_score"
            android:layout_marginTop="@dimen/constraint_top"
            android:textSize="@dimen/number_size"
            app:layout_constraintEnd_toEndOf="@+id/appCompatTextView3"
            app:layout_constraintStart_toStartOf="@+id/appCompatTextView3"
            app:layout_constraintTop_toBottomOf="@+id/appCompatTextView3"
            tools:text="200">

        </androidx.appcompat.widget.AppCompatTextView>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="300dp">

        </androidx.constraintlayout.widget.Guideline>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnTryAgain"
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            android:layout_marginTop="@dimen/constraint_top"
            android:onClick="@{() -> viewModel.onPlayAgainPressed()}"
            android:text="@string/try_again"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline">

        </androidx.appcompat.widget.AppCompatButton>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/appCompatTextView4"
            style="@style/TitleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top_big"
            android:text="@string/new_best_score"
            app:layout_constraintEnd_toEndOf="@+id/btnTryAgain"
            app:layout_constraintHorizontal_bias="0.518"
            app:layout_constraintStart_toStartOf="@+id/btnTryAgain"
            app:layout_constraintTop_toBottomOf="@+id/btnTryAgain">

        </androidx.appcompat.widget.AppCompatTextView>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/appCompatButton3"
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            android:layout_marginTop="@dimen/constraint_top"
            android:onClick="@{() -> viewModel.onViewLeaderboardPressed()}"
            android:text="@string/view_leaderboard"
            app:layout_constraintEnd_toEndOf="@+id/appCompatTextView4"
            app:layout_constraintHorizontal_bias="0.518"
            app:layout_constraintStart_toStartOf="@+id/appCompatTextView4"
            app:layout_constraintTop_toBottomOf="@+id/appCompatTextView4">

        </androidx.appcompat.widget.AppCompatButton>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/addPlayer"
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            android:layout_marginTop="@dimen/constraint_top"
            android:text="ADD PLAYER"
            android:onClick="@{() -> viewModel.onClickAddPlayer()}"
            app:layout_constraintEnd_toEndOf="@+id/appCompatButton3"
            app:layout_constraintStart_toStartOf="@+id/appCompatButton3"
            app:layout_constraintTop_toBottomOf="@+id/appCompatButton3" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>